QDataStream: allow streaming of enums backed by long and unsigned long

On Unix 64-bit platforms (LP64), compilers will use long and unsigned
long as the underlying type of 64-bit enumerations without explicit
type, such as:
  enum E { V = 0x1'0000'0000 };

User code may also explicitly choose std::int64_t or std::uint64_t,
which on those platforms map to long and unsigned long, respectively.
Likewise std::ptrdiff_t and std::size_t, which are the same.

This means we do allow streaming of enums with explicit long and
unsigned long types, such as:
  enum ELong : long { A, B, C };
which change sizes between platforms.

[ChangeLog][QtCore][QDataStream] QDataStream now supports streaming
enumerations whose underlying type is long or unsigned long (like
std::int64_t, std::uint64_t, ptrdiff_t, size_t on 64-bit Unix
platforms).

Fixes: QTBUG-86424
Change-Id: I34ef9422a252ce3df468fffd4ba074cddea20005
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>